// Copyright Â© 2017-2018 Stratumn SAS
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as
// published by the Free Software Foundation, either version 3 of the
// License, or (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program. If not, see <https://www.gnu.org/licenses/>.

syntax = "proto3";

import "github.com/stratumn/go-indigonode/cli/grpc/ext/ext.proto";

package stratumn.indigonode.core.manager.grpc;

option go_package = "github.com/stratumn/go-indigonode/core/manager/grpc;grpc";

// The manager service definition.
service Manager {
  // Streams the registered services.
  rpc List (ListReq) returns (stream Service) {
    option (stratumn.indigonode.cli.ext.method_desc) = "List all the available services";
  }

  // Returns information about a service.
  rpc Info (InfoReq) returns (Service) {
    option (stratumn.indigonode.cli.ext.method_desc) = "Get information on a service";
  }

  // Starts a service.
  rpc Start (StartReq) returns (Service) {
    option (stratumn.indigonode.cli.ext.method_desc) = "Start a service";
  }

  // Stops a service.
  rpc Stop (StopReq) returns (Service) {
    option (stratumn.indigonode.cli.ext.method_desc) = "Stop a service";
  }

  // Prunes services.
  rpc Prune (PruneReq) returns (stream Service) {
    option (stratumn.indigonode.cli.ext.method_desc) = "Prune unused services";
  }
}

// The list request message.
message ListReq {
}

// The info request message.
message InfoReq {
  string id = 1 [
    (stratumn.indigonode.cli.ext.field_required) = true,
    (stratumn.indigonode.cli.ext.field_desc) = "Service ID"
  ];
}

// The start request message.
message StartReq {
  string id = 1 [
    (stratumn.indigonode.cli.ext.field_required) = true,
    (stratumn.indigonode.cli.ext.field_desc) = "Service ID"
  ];
}

// The stop request message.
message StopReq {
  string id = 1 [
    (stratumn.indigonode.cli.ext.field_required) = true,
    (stratumn.indigonode.cli.ext.field_desc) = "Service ID"
  ];
  bool prune = 2 [
    (stratumn.indigonode.cli.ext.field_desc) = "Prune services after stopping the service"
  ];
}

// The prune request message.
message PruneReq {
}

// The service message containing information about a service.
message Service {
  string id = 1;
  enum Status {
      STOPPED = 0;
      STARTING = 1;
      RUNNING = 2;
      STOPPING = 3;
      ERRORED = 4;
  }
  Status status = 2;
  repeated string needs = 3;
  bool stoppable = 4;
  bool prunable = 5;
  string name = 6;
  string desc = 7;
}
